<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlCompat"
    tools:targetApi="jelly_bean">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/grey_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dp10"
                android:paddingStart="@dimen/dp10"
                android:paddingTop="@dimen/dp10">

                <ImageView
                    android:id="@+id/ivBookCover"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/book_cover"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitle_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/title_1"
                    android:textColor="@android:color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivBookCover" />

                <TextView
                    android:id="@+id/tvTitle_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/title_1"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle_1" />

                <TextView
                    android:id="@+id/tvTagsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp10"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:text="@string/tags_label"
                    android:textColor="@color/greyD9D9D9"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle_2"
                    tools:targetApi="jelly_bean" />

                <LinearLayout
                    android:id="@+id/clTags"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCategoriesLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvTagsLabel" />

                <TextView
                    android:id="@+id/tvArtistsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:text="@string/artists_label"
                    android:textColor="@color/greyD9D9D9"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clTags"
                    tools:targetApi="jelly_bean" />

                <LinearLayout
                    android:id="@+id/clArtists"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCategoriesLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvArtistsLabel" />

                <TextView
                    android:id="@+id/tvLanguagesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:text="@string/languages_label"
                    android:textColor="@color/greyD9D9D9"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clArtists"
                    tools:targetApi="jelly_bean" />

                <LinearLayout
                    android:id="@+id/clLanguages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCategoriesLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvLanguagesLabel" />

                <TextView
                    android:id="@+id/tvCategoriesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:text="@string/categories_label"
                    android:textColor="@color/greyD9D9D9"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clLanguages"
                    tools:targetApi="jelly_bean" />

                <LinearLayout
                    android:id="@+id/clCategories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCategoriesLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvCategoriesLabel" />

                <TextView
                    android:id="@+id/tvCharactersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:text="@string/characters_label"
                    android:textColor="@color/greyD9D9D9"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clCategories"
                    tools:targetApi="jelly_bean" />

                <LinearLayout
                    android:id="@+id/clCharacters"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCategoriesLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvCharactersLabel" />

                <TextView
                    android:id="@+id/tvParodiesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:text="@string/parodies_label"
                    android:textColor="@color/greyD9D9D9"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clCharacters"
                    tools:targetApi="jelly_bean" />

                <LinearLayout
                    android:id="@+id/clParodies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCategoriesLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvParodiesLabel" />

                <TextView
                    android:id="@+id/tvGroupsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:text="@string/groups_label"
                    android:textColor="@color/greyD9D9D9"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clParodies"
                    tools:targetApi="jelly_bean" />

                <LinearLayout
                    android:id="@+id/clGroups"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCategoriesLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvGroupsLabel" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>