<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlCompat"
    tools:targetApi="lollipop">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/grey_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ivMainLogo"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/main_logo"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:src="@drawable/ic_nhentai_logo_main"
                app:layout_constraintEnd_toStartOf="@id/edtSearch"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_white_left_corners_radius_1"
                android:hint="@string/search"
                android:inputType="text"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ibSearch"
                app:layout_constraintStart_toEndOf="@id/ivMainLogo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibSearch"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_red_right_corners_radius_1"
                android:contentDescription="@string/main_search_button"
                android:src="@drawable/ic_search_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ibHamburger"
                app:layout_constraintStart_toEndOf="@id/edtSearch"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibHamburger"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_grey_all_corners_radius_1"
                android:contentDescription="@string/main_search_button"
                android:src="@drawable/ic_hamburger_menu_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ibSearch"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMainTabs"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clHeader" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsvMainList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvMainTabs">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvMainList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/clNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:visibility="visible">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvPagination"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btnLast"
                        app:layout_constraintStart_toEndOf="@id/btnFirst"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/btnFirst"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/previous"
                        android:src="@drawable/ic_previous_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/btnLast"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/next"
                        android:src="@drawable/ic_next_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clNothing"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/grey_4"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clHeader">

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivNothing"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:contentDescription="@string/nothing_to_show"
                    android:src="@drawable/ic_nothing_here_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNothing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/internet_error"
                    android:textColor="@color/grey_3"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivNothing" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>